--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
-        "guzzlehttp/guzzle": "4.1.*"
+        "php": ">=5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
